parser/src/snapshots/rustpython_parser__parser__tests__parse_dict_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 1,
    },
    custom: (),
    node: DictComp {
        key: Located {
            location: Location {
                row: 1,
                column: 2,
            },
            custom: (),
            node: Name {
                id: "x1",
                ctx: Load,
            },
        },
        value: Located {
            location: Location {
                row: 1,
                column: 6,
            },
            custom: (),
            node: Name {
                id: "x2",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 13,
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 18,
                    },
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: false,
            },
        ],
    },
}
