parser/src/snapshots/rustpython_parser__parser__tests__parse_list_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 1,
    },
    custom: (),
    node: ListComp {
        elt: Located {
            location: Location {
                row: 1,
                column: 2,
            },
            custom: (),
            node: Name {
                id: "x",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 8,
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 13,
                    },
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: false,
            },
        ],
    },
}
